Ensure ruby, ruby-install, chruby work

--- a/all.yml
+++ b/all.yml
@@ -2,5 +2,9 @@
 
 - hosts: all
   roles:
+    - { role: common, become: yes }
     - { role: nginx, become: yes }
     - { role: fail2ban, become: yes }
+    - { role: ruby-install }
+    - { role: chruby }
+    - { role: ruby }
