Comment out ruby-install, chruby, ruby installation tasks
* Use the apt-packaged version direction. Incidentally, this is 2.3.x so
it's not too bad.

* Update README with installation step

--- a/all.yml
+++ b/all.yml
@@ -5,7 +5,7 @@
     - { role: common, become: yes }
     - { role: nginx, become: yes }
     - { role: fail2ban, become: yes }
-    - { role: ruby-install }
-    - { role: chruby }
-    - { role: ruby }
+    # - { role: ruby-install }
+    # - { role: chruby }
+    # - { role: ruby }
     - { role: git-hook }
