--- a/roles/git-hook/tasks/main.yml
+++ b/roles/git-hook/tasks/main.yml
@@ -9,9 +9,9 @@
 - name: create git hooks folder
   file: path={{ repo_dir }}/hooks state=directory mode=0744 force=true
 - name: copy git hook file
-  template: src=post-receive dest={{ repo_dir }}/hooks/post-receive mode="u=rx,g=r,o=r"
+  template: src=post-receive dest={{ repo_dir }}/hooks/post-receive mode="u=rx,g=rx,o=r"
   tags: copy
 - name: remove temporary directory if any
   file: path={{ temp_dir }} state=absent
 - name: Output the git remote path
-  debug: msg="Remote for your local git repo is ssh://{{ ansible_user }}@{{ ansible_hostname }}/{{ repo_dir }}"
+  debug: msg="Remote for your local git repo is ssh://{{ ansible_user }}@{{ ansible_eth0["ipv4"]["address"] }}/{{ repo_dir }}"
