Use native ruby
There are too many problems that I don't want to debug right now when
using ruby-install

--- a/all.yml
+++ b/all.yml
@@ -7,5 +7,5 @@
     - { role: fail2ban, become: yes }
     # - { role: ruby-install }
     # - { role: chruby }
-    # - { role: ruby }
+    - { role: ruby }
     - { role: git-hook }
