--- a/roles/nginx/templates/webserver.conf
+++ b/roles/nginx/templates/webserver.conf
@@ -27,4 +27,7 @@ server {
     add_header Cache-Control public;
     etag on;
   }
+
+  error_page 404 /404.html;
+  error_page 403 405 500 501 502 503 504 /error.html;
 }
